--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
-    "jade": "~1.11.0",
+    "express-session": "^1.15.3",
+    "lowdb": "^0.16.2",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "uuid": "^3.1.0"
   }
 }
