--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./app/bin/www"
+    "start": "node ./app/bin/www",
+    "test": "mocha ./test/**/*.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -15,5 +16,11 @@
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
     "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2",
+    "sinon": "^2.3.6",
+    "supertest": "^3.0.0"
   }
 }
