--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,14 @@
     "express-session": "^1.15.3",
     "lowdb": "^0.16.2",
     "morgan": "~1.8.1",
+    "request": "^2.81.0",
     "serve-favicon": "~2.4.2",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^4.0.2",
     "mocha": "^3.4.2",
+    "nock": "^9.0.13",
     "sinon": "^2.3.6",
     "supertest": "^3.0.0"
   }
