--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
