--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
+    "axios-mock-adapter": "^1.9.0",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-istanbul": "^4.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
