add moment library for dating. add filter for history searching

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.16.2",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
+    "moment": "^2.20.0",
     "vue": "^2.5.6",
     "vue-router": "^2.3.1"
   },
