--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "less-loader": "^4.0.4",
     "moment": "^2.20.0",
     "vue": "^2.5.6",
+    "vue-chart-js": "^1.4.1",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
