--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "moment": "^2.20.0",
+    "sha256": "^0.2.0",
     "vue": "^2.5.6",
     "vue-chart-js": "^1.4.1",
     "vue-router": "^2.3.1"
